style.css
/* ... */
.linksM {
  width: 100%;
  right: 0;
  top: 0;
  height: 14vh;
  z-index: 5;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.linksM ul {
  display: flex;
  justify-content: space-around;
  list-style: none;
  width: 100%;
}
.linksM li {
  list-style: none;
  padding: 10px 20px;
  border-radius: 30px;
}
.linksM li:hover {
  box-shadow: 10px 10px 49px 0px rgba(0, 0, 0, 0.75);
  animation: grow 30s linear 10ms infinite;
}
@keyframes grow {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.2);
  }
}
.linksM a {
  text-decoration: none;
  color: #eee;
  padding: 0.7rem 0;
  display: inline-block;
  font-size: 1.3rem;
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: 1px;
  transition: 0.3s;
  opacity: 0;
  transform: translateY(10px);
  animation: hide 0.5s forwards ease;
}

.linksM a:hover {
  color: #fff;
}

.containerM.active .linksM a {
  animation: appear 0.5s forwards ease var(--i);
}

@keyframes appear {
  from {
    opacity: 0;
    transform: translateY(10px);
  }
  to {
    opacity: 1;
    transform: translateY(0px);
  }
}

@keyframes hide {
  from {
    opacity: 1;
    transform: translateY(0px);
  }
  to {
    opacity: 0;
    transform: translateY(10px);
  }
}

.containerM.active .shadowM.one {
  animation: shadow-one 0.6s ease-out;
  transform: perspective(1300px) rotateY(20deg) translateZ(215px) scale(0.5);
}

@keyframes shadow-one {
  0% {
    transform: translate(0);
  }

  5% {
    transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
  }

  100% {
    transform: perspective(1300px) rotateY(20deg) translateZ(215px) scale(0.5);
  }
}

.containerM.active .shadowM.two {
  animation: shadow-two 0.6s ease-out;
  transform: perspective(1300px) rotateY(20deg) translateZ(120px) scale(0.5);
}

@keyframes shadow-two {
  0% {
    transform: translate(0);
  }

  20% {
    transform: perspective(1300px) rotateY(20deg) translateZ(310px) scale(0.5);
  }

  100% {
    transform: perspective(1300px) rotateY(20deg) translateZ(120px) scale(0.5);
  }
}

.containerM.active .mainM:hover + .shadowM.one {
  transform: perspective(1300px) rotateY(20deg) translateZ(230px) scale(0.5);
}

.containerM.active .mainM:hover {
  transform: perspective(1300px) rotateY(20deg) translateZ(340px) scale(0.5);
}
@media screen and (max-width: 568px) {
  .linksM {
    height: 8vh;
  }
}
.containerM {
  display: none;
}
@media (max-width: 1368px) {
  .projects .container {
    height: 340px;
  }
  .main-menu {
    display: none;
  }
  .page-inner::after {
    top: 330rem;
  }
  .projects {
    grid-template-columns: repeat(1, 1fr);
  }
  .land-section {
    width: 100%;
    padding: 40px;
  }
  .heading h1 {
    font-size: 1rem;
  }
  .heading::after {
    font-size: 0.8rem;
    margin-left: 8rem;
    margin-top: -1rem;
  }
  .menu-back {
    display: none;
  }
  .projects::after {
    margin-top: 114rem;
  }
  .intro {
    font-size: 2rem;
    letter-spacing: 6px;
    line-height: 4rem;
  }
  .intro::before {
    margin-top: -2rem;
    font-size: 1.5rem;
  }
  .intro::after {
    margin-top: 3.5rem;
    margin-left: -2rem;
  }
  .intro-paragraph::after {
    left: 20rem;
    bottom: 0;
  }
  .text-zone img {
    display: none;
  }
  .hide {
    display: inline;
  }
  .work {
    width: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding: 50px;
  }
  .work p {
    width: 100%;
  }
  .about {
    width: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding: 60px;
  }
  .about p {
    width: 100%;
  }
  .contact {
    width: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding: 50px;
  }
  .contact p {
    width: 100%;
  }
  .text-zone-contact {
    width: 100%;
  }
  .form {
    width: 100%;

    flex-direction: column;
    margin-top: 5rem;
  }
  .header-div {
    display: flex;
    justify-content: start;
    align-items: center;
  }
  .intro-h2 {
    font-size: 2rem;
  }
  .heading h1 {
    display: flex;
    justify-content: center;
  }
  .input-field1 {
    width: 100%;
  }
  .input-field2 {
    width: 100%;
    margin-left: 0;
  }
  .input-field3 {
    height: 3rem;
  }
  .containerM {
    display: block;
  }
  .intro-paragraph::after {
    content: "";
  }
}

